# safesol

./: .env.example  .gitignore  .prettierignore  00_GROTH16_STATUS.md  00_START_HERE.md  ARCHITECTURE.md  Anchor.toml  BUILD_CHECKLIST.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_SUMMARY.md  COMPLETION_SUMMARY.md  CURRENT_STATUS.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_QUICK_START.md  DASHBOARD_ROUTES.md  DELIVERY_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DOCS_INDEX.md  FASTFILE_ERROR_EXPLAINED.md  FIXES_SUMMARY.md  GROTH16_GUIDE.md  GROTH16_IMPLEMENTATION_SUMMARY.txt  GROTH16_QUICK_SETUP.md  GROTH16_SUCCESS.md  HASH_TO_U64_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_READY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LAUNCH_GUIDE.md  LIGHT_PROTOCOL_COMPLETE.md  LIGHT_PROTOCOL_INTEGRATION.md  MULTI_PAGE_DASHBOARD.md  NEXT_STEPS.md  PRIVACY_RECEIPT_IMPLEMENTATION.md  PRODUCTION_ROADMAP.md  PROJECT_SUMMARY.md  PROOF_SERIALIZATION_FIX.md  PROOF_SERIALIZATION_QUICK_FIX.md  (+16 more)
apps/web/: .env.example  next.config.js  package.json  tailwind.config.js  (+1 more)
light/: README.md  compressed-tree.ts  proofs.ts
programs/privacy-pay/: Cargo.toml
programs/privacy-pay/src/: lib.rs
programs/privacy-pay/src/instructions/: add_commitment.rs  initialize.rs  mod.rs  private_spend.rs
programs/privacy-pay/src/state/: mod.rs  transaction_limits.rs
programs/zk-verifier/: Cargo.toml
programs/zk-verifier/src/: lib.rs
scripts/: check_deployment.sh  demo_flow.ts  deploy.ts  init_state.ts  simple_init.js  test_proof.js
tests/: privacy-pay.ts
zk/: README.md  setup.sh
(+40 files in other folders)
