[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_verifier"

[workspace]

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
growth16 = []
default = ["growth16"]

[dependencies]
anchor-lang = "0.32.1"
